--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 body {
-    background: lightgreen;
+    background: lightblue;
     font-family: Verdana;
 }  
 #content {
@@ -30,21 +30,20 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
+        <h1>Michaiah Pierce</h1>
         <h2>Freshman in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a freshman at Bob Jones University studying kinesiology with a concentration in 
+            sports medicine and rehabilitation.</p>
          <p>
-            I attend Cornerstone Baptist Church in Greer SC. I have a mobile-friendly 
-            sheet music <a href="https://mobilehymns.org/">website</a> and post weekly service
-            schedules for several churches.
+            I am from Fort Collins, Colorado. I have three siblings and a dog named Onyx. 
+            I am taking this class to learn more about technology and learn how to use Excel.
          </p> 
          <p>
-            I enjoy listening to podcasts and having deep conversations.
+            I enjoy listening to music, playing the piano, and being outdoors in the sunshine.
          </p>
         <h3>EDUCATION</h3>
-        Computer Science<br />
+        Kinesiology<br />
         Bob Jones University
     </div>
            
